[gd_scene load_steps=4 format=3 uid="uid://6tybon8ioas4"]

[ext_resource type="Script" path="res://Scenes/UI/custom_card_selector.gd" id="1_vss7v"]
[ext_resource type="Texture2D" uid="uid://ce68ei33hl51q" path="res://Assets/Values/unloaded.png" id="2_jk6s2"]
[ext_resource type="Texture2D" uid="uid://c3sj85ac5bcdw" path="res://Assets/Values/outline.png" id="3_vaqo2"]

[node name="CustomCardSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3840.0
offset_bottom = -2160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vss7v")

[node name="Outline" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(0.06, 0.06)
texture = ExtResource("3_vaqo2")

[node name="ValueButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -54.0
offset_top = -2.0
offset_right = 2746.0
offset_bottom = 1064.0
scale = Vector2(0.06, 0.06)
texture_normal = ExtResource("2_jk6s2")
ignore_texture_size = true
stretch_mode = 3

[connection signal="button_down" from="ValueButton" to="." method="_on_value_button_button_down"]
[connection signal="focus_entered" from="ValueButton" to="." method="_on_value_button_focus_entered"]
[connection signal="focus_exited" from="ValueButton" to="." method="_on_value_button_focus_exited"]
[connection signal="mouse_entered" from="ValueButton" to="." method="_on_value_button_mouse_entered"]
[connection signal="mouse_exited" from="ValueButton" to="." method="_on_value_button_mouse_exited"]
